# iitp_interpolation

./: .gitignore  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  license.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree
src/iitp_interpolation/: .coverage  cartesiangrid.py  console.py  interpn.py  main.py  pyproject.toml  regulargrid.py
src/iitp_interpolation/metrics/: runtime_count.py
src/iitp_interpolation/techniques/: README.md  bicubic.py  bilinear.py  cartesiangrid.py  interpn.py  nearest_neoghbour.py  regulargrid.py
src/iitp_interpolation/tests/: test_bicubic.py  test_bilinear.py  test_cartesian.py  test_nearest_neighbour.py
src/iitp_interpolation/utils/: image.py  parser.py  utils.py
