[project]
name = "iitp-interpolation"
version = "0.1.0"
description = ""
authors = [
    {name = "bunin-kirill",email = "kirbucom@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
